# KaPet

./: .gitignore  DockerFile  Dockerfile  README.md  configuration.py  configuration.yaml  constants.py  data_loaders.py  datasets.py  docker-compose.yaml  image_transforms.py  poetry.toml  pyproject.toml  requirements.txt
lib/: __init__.py  configuration.py  configuration.yaml  constants.py  datasets.py  image_transforms.py  utils.py
lib/models/: __init__.py  base_image_classification_model.py  base_image_models.py  base_image_regression_model.py  efficientnet.py  resnet.py  swin.py
models/: base_image_regression_model.py  efficientnet.py  resnet.py  swin.py
notebooks/: kfold_runner (2).ipynb  kfold_runner (3).ipynb  kfold_runner.ipynb  resnet_kfold_runner.ipynb  swin_kfold_runner.ipynb
pipelines/: first_pass_VGA.py  transforms.py
preprocessing/: image_preprocesser.py
