[tool.poetry]
name = "KaPet"
version = "0.1.0"
description = ""
authors = ["pkruskal <pkruskal2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.1"
matplotlib = "^3.3.4"
loguru = "^0.5.3"
seaborn = "^0.11.1"
poetry-version = "^0.1.5"
torch = "^1.9.1"
torchvision = "^0.10.1"
torchaudio = "^0.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[vitrualenvs]
in-project = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
